generated-in/imnodes/dcimnodes.h

typedef struct ImNodesIO_t ImNodesIO;
#define ImNodes ImNodes
typedef int ImNodesPinShape;         // -> enum ImNodesPinShape_
struct ImNodesIO_t
{
    ImNodesIO_EmulateThreeButtonMouse EmulateThreeButtonMouse;

    ImNodesIO_LinkDetachWithModifierClick LinkDetachWithModifierClick;

    ImNodesIO_MultipleSelectModifier MultipleSelectModifier;

    // Holding alt mouse button pans the node area, by default middle mouse button will be used
    // Set based on ImGuiMouseButton values
    int   AltMouseButton;

    // Panning speed when dragging an element and mouse is outside the main editor view.
    float AutoPanningSpeed;
};
typedef struct ImVec2_t ImVec2;
typedef struct ImNodesContext_t ImNodesContext;
// An editor context corresponds to a set of nodes in a single workspace (created with a single
// Begin/EndNodeEditor pair)
//
// By default, the library creates an editor context behind the scenes, so using any of the imnodes
// functions doesn't require you to explicitly create a context.
typedef struct ImNodesEditorContext_t ImNodesEditorContext;
CIMGUI_API ImNodesContext* ImNodesCreateContext(void);
CIMGUI_API void            ImNodesDestroyContextEx(ImNodesContext* ctx /* = NULL */);  // NULL = destroy current context
CIMGUI_API ImNodesContext* ImNodesGetCurrentContext(void);
CIMGUI_API ImNodesEditorContext* ImNodesEditorContextCreate(void);
CIMGUI_API void                  ImNodesEditorContextFree(ImNodesEditorContext*);
CIMGUI_API void                  ImNodesEditorContextSet(ImNodesEditorContext*);
CIMGUI_API void                  ImNodesEditorContextMoveToNode(const int node_id);
CIMGUI_API ImNodesIO* ImNodesGetIO(void);
// The top-level function call. Call this before calling BeginNode/EndNode. Calling this function
// will result the node editor grid workspace being rendered.
CIMGUI_API void ImNodesBeginNodeEditor(void);
CIMGUI_API void ImNodesEndNodeEditor(void);
// id can be any positive or negative integer, but INT_MIN is currently reserved for internal use.
CIMGUI_API void ImNodesBeginNode(int id);
CIMGUI_API void ImNodesEndNode(void);
// Place your node title bar content (such as the node title, using ImGui::Text) between the
// following function calls. These functions have to be called before adding any attributes, or the
// layout of the node will be incorrect.
CIMGUI_API void ImNodesBeginNodeTitleBar(void);
CIMGUI_API void ImNodesEndNodeTitleBar(void);
CIMGUI_API void ImNodesBeginInputAttributeEx(int id, ImNodesPinShape shape /* = ImNodesPinShape_CircleFilled */);
CIMGUI_API void ImNodesEndInputAttribute(void);
CIMGUI_API void ImNodesBeginOutputAttributeEx(int id, ImNodesPinShape shape /* = ImNodesPinShape_CircleFilled */);
CIMGUI_API void ImNodesEndOutputAttribute(void);
// Create a static attribute block. A static attribute has no pin, and therefore can't be linked to
// anything. However, you can still use IsAttributeActive() and IsAnyAttributeActive() to check for
// attribute activity.
CIMGUI_API void ImNodesBeginStaticAttribute(int id);
CIMGUI_API void ImNodesEndStaticAttribute(void);
// Clears the list of selected nodes/links. Useful if you want to delete a selected node or link.
CIMGUI_API void ImNodesClearNodeSelection(void);
CIMGUI_API void ImNodesClearLinkSelection(void);
CIMGUI_API void ImNodesClearNodeSelectionInt(int node_id);
CIMGUI_API void ImNodesClearLinkSelectionInt(int link_id);