generated-out/imnodes/dear-imgui-raw-imnodes/cbits/DearImGuiWrappers.h

void ImNodesEditorContextGetPanning_wrap(ImVec2* _out);
void ImNodesEditorContextResetPanning_wrap(ImVec2 const* pos);
void ImNodesGetNodeDimensions_wrap(int id, ImVec2* _out);
void ImNodesGetNodeEditorSpacePos_wrap(const int node_id, ImVec2* _out);
void ImNodesGetNodeGridSpacePos_wrap(const int node_id, ImVec2* _out);
void ImNodesGetNodeScreenSpacePos_wrap(const int node_id, ImVec2* _out);