generated-out/imnodes/dear-imgui-raw-imnodes/src/DearImGui/Raw/ImNodes.hsc

{-# LANGUAGE CApiFFI #-}
{-# LANGUAGE PatternSynonyms #-}
{-# OPTIONS_GHC -Wno-unused-imports #-}

-- This file was generated by dear-bindings-ffi. Do not edit by hand.
-- Haskell function names: lower the first character of the C name.
-- e.g. ImGui_Begin -> imGui_Begin

module DearImGui.Raw.ImNodes where

import Foreign.C.String (CString)
import Foreign.C.Types
import Foreign.Marshal.Alloc (alloca)
import Foreign.Marshal.Utils (with)
import Foreign.Ptr (FunPtr, Ptr)
import Foreign.Storable (Storable (..))
import Data.Int (Int8, Int16, Int32, Int64)
import Data.Word (Word8, Word16, Word32, Word64)
import DearImGui.Raw.Types
import DearImGui.Raw.ImNodes.Types

#include "dcimnodes.h"

-- functions

-- C: void ImNodes::BeginInputAttribute(int id, ImNodesPinShape shape)
foreign import capi unsafe "dcimnodes.h ImNodesBeginInputAttributeEx"
  imNodesBeginInputAttributeEx :: CInt -> ImNodesPinShape -> IO ()
-- C: void ImNodes::BeginNode(int id)
foreign import capi unsafe "dcimnodes.h ImNodesBeginNode"
  imNodesBeginNode :: CInt -> IO ()
-- C: void ImNodes::BeginNodeEditor()
foreign import capi unsafe "dcimnodes.h ImNodesBeginNodeEditor"
  imNodesBeginNodeEditor :: IO ()
-- C: void ImNodes::BeginNodeTitleBar()
foreign import capi unsafe "dcimnodes.h ImNodesBeginNodeTitleBar"
  imNodesBeginNodeTitleBar :: IO ()
-- C: void ImNodes::BeginOutputAttribute(int id, ImNodesPinShape shape)
foreign import capi unsafe "dcimnodes.h ImNodesBeginOutputAttributeEx"
  imNodesBeginOutputAttributeEx :: CInt -> ImNodesPinShape -> IO ()
-- C: void ImNodes::BeginStaticAttribute(int id)
foreign import capi unsafe "dcimnodes.h ImNodesBeginStaticAttribute"
  imNodesBeginStaticAttribute :: CInt -> IO ()
-- C: void ImNodes::ClearLinkSelection()
foreign import capi unsafe "dcimnodes.h ImNodesClearLinkSelection"
  imNodesClearLinkSelection :: IO ()
-- C: void ImNodes::ClearLinkSelection(int link_id)
foreign import capi unsafe "dcimnodes.h ImNodesClearLinkSelectionInt"
  imNodesClearLinkSelectionInt :: CInt -> IO ()
-- C: void ImNodes::ClearNodeSelection()
foreign import capi unsafe "dcimnodes.h ImNodesClearNodeSelection"
  imNodesClearNodeSelection :: IO ()
-- C: void ImNodes::ClearNodeSelection(int node_id)
foreign import capi unsafe "dcimnodes.h ImNodesClearNodeSelectionInt"
  imNodesClearNodeSelectionInt :: CInt -> IO ()
-- C: ImNodesContext* ImNodes::CreateContext()
foreign import capi unsafe "dcimnodes.h ImNodesCreateContext"
  imNodesCreateContext :: IO (Ptr ImNodesContext)
-- C: void ImNodes::DestroyContext(ImNodesContext* ctx)
foreign import capi unsafe "dcimnodes.h ImNodesDestroyContextEx"
  imNodesDestroyContextEx :: (Ptr ImNodesContext) -> IO ()
-- C: ImNodesEditorContext* ImNodes::EditorContextCreate()
foreign import capi unsafe "dcimnodes.h ImNodesEditorContextCreate"
  imNodesEditorContextCreate :: IO (Ptr ImNodesEditorContext)
-- C: void ImNodes::EditorContextFree(ImNodesEditorContext* __unnamed_arg0__)
foreign import capi unsafe "dcimnodes.h ImNodesEditorContextFree"
  imNodesEditorContextFree :: (Ptr ImNodesEditorContext) -> IO ()
foreign import capi unsafe "DearImGuiWrappers.h ImNodesEditorContextGetPanning_wrap"
  c_imNodesEditorContextGetPanning :: (Ptr ImVec2) -> IO ()

imNodesEditorContextGetPanning :: IO ImVec2
imNodesEditorContextGetPanning =
  alloca $ \_pOut -> c_imNodesEditorContextGetPanning _pOut >> peek _pOut

-- C: void ImNodes::EditorContextMoveToNode(const int node_id)
foreign import capi unsafe "dcimnodes.h ImNodesEditorContextMoveToNode"
  imNodesEditorContextMoveToNode :: CInt -> IO ()
foreign import capi unsafe "DearImGuiWrappers.h ImNodesEditorContextResetPanning_wrap"
  c_imNodesEditorContextResetPanning :: (Ptr ImVec2) -> IO ()

imNodesEditorContextResetPanning :: ImVec2 -> IO ()
imNodesEditorContextResetPanning pos =
  with pos $ \_p0 -> c_imNodesEditorContextResetPanning _p0

-- C: void ImNodes::EditorContextSet(ImNodesEditorContext* __unnamed_arg0__)
foreign import capi unsafe "dcimnodes.h ImNodesEditorContextSet"
  imNodesEditorContextSet :: (Ptr ImNodesEditorContext) -> IO ()
-- C: void ImNodes::EndInputAttribute()
foreign import capi unsafe "dcimnodes.h ImNodesEndInputAttribute"
  imNodesEndInputAttribute :: IO ()
-- C: void ImNodes::EndNode()
foreign import capi unsafe "dcimnodes.h ImNodesEndNode"
  imNodesEndNode :: IO ()
-- C: void ImNodes::EndNodeEditor()
foreign import capi unsafe "dcimnodes.h ImNodesEndNodeEditor"
  imNodesEndNodeEditor :: IO ()
-- C: void ImNodes::EndNodeTitleBar()
foreign import capi unsafe "dcimnodes.h ImNodesEndNodeTitleBar"
  imNodesEndNodeTitleBar :: IO ()
-- C: void ImNodes::EndOutputAttribute()
foreign import capi unsafe "dcimnodes.h ImNodesEndOutputAttribute"
  imNodesEndOutputAttribute :: IO ()
-- C: void ImNodes::EndStaticAttribute()
foreign import capi unsafe "dcimnodes.h ImNodesEndStaticAttribute"
  imNodesEndStaticAttribute :: IO ()
-- C: ImNodesContext* ImNodes::GetCurrentContext()
foreign import capi unsafe "dcimnodes.h ImNodesGetCurrentContext"
  imNodesGetCurrentContext :: IO (Ptr ImNodesContext)
-- C: ImNodesIO* ImNodes::GetIO()
foreign import capi unsafe "dcimnodes.h ImNodesGetIO"
  imNodesGetIO :: IO (Ptr ImNodesIO)
foreign import capi unsafe "DearImGuiWrappers.h ImNodesGetNodeDimensions_wrap"
  c_imNodesGetNodeDimensions :: CInt -> (Ptr ImVec2) -> IO ()

imNodesGetNodeDimensions :: CInt -> IO ImVec2
imNodesGetNodeDimensions id_ =
  alloca $ \_pOut -> c_imNodesGetNodeDimensions id_ _pOut >> peek _pOut

foreign import capi unsafe "DearImGuiWrappers.h ImNodesGetNodeEditorSpacePos_wrap"
  c_imNodesGetNodeEditorSpacePos :: CInt -> (Ptr ImVec2) -> IO ()

imNodesGetNodeEditorSpacePos :: CInt -> IO ImVec2
imNodesGetNodeEditorSpacePos node_id =
  alloca $ \_pOut -> c_imNodesGetNodeEditorSpacePos node_id _pOut >> peek _pOut

foreign import capi unsafe "DearImGuiWrappers.h ImNodesGetNodeGridSpacePos_wrap"
  c_imNodesGetNodeGridSpacePos :: CInt -> (Ptr ImVec2) -> IO ()

imNodesGetNodeGridSpacePos :: CInt -> IO ImVec2
imNodesGetNodeGridSpacePos node_id =
  alloca $ \_pOut -> c_imNodesGetNodeGridSpacePos node_id _pOut >> peek _pOut

foreign import capi unsafe "DearImGuiWrappers.h ImNodesGetNodeScreenSpacePos_wrap"
  c_imNodesGetNodeScreenSpacePos :: CInt -> (Ptr ImVec2) -> IO ()

imNodesGetNodeScreenSpacePos :: CInt -> IO ImVec2
imNodesGetNodeScreenSpacePos node_id =
  alloca $ \_pOut -> c_imNodesGetNodeScreenSpacePos node_id _pOut >> peek _pOut
